<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="general_input_datagrid_params" Id="{bde90c17-6b58-4868-83e2-051b3b1f7058}">
    <Declaration><![CDATA[TYPE general_input_datagrid_params :
STRUCT
	tension : LREAL :=4;
	linspeed : LREAL:=4;
	unwinding : BOOL;
END_STRUCT
END_TYPE

]]></Declaration>
  </DUT>
</TcPlcObject>