<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="payoff_input_datagrid_params" Id="{079ded16-7f20-4f9a-9c3f-8a2b872192d4}">
    <Declaration><![CDATA[TYPE payoff_input_datagrid_params :
STRUCT
	motor_name : STRING;
	tape_type : INT :=1;
	coil_type : INT :=1;
	radius : LREAL :=200;
	enabled : BOOL ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>