<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="pickup_output_datagrid_params" Id="{4048ef7b-c882-4bcb-9831-d9bb845ebab2}">
    <Declaration><![CDATA[TYPE pickup_output_datagrid_params :
STRUCT
	motor_name : STRING;
	torque : LREAL;
	estimated_tension :LREAL;
	turn_count :LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>