<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="misc_settings_input_datagrid_params" Id="{856ca7a6-786e-4751-adfa-cce3565d4869}">
    <Declaration><![CDATA[TYPE misc_settings_input_datagrid_params :
STRUCT
	unwinding_mode : BOOL;
	acceleration : LREAL;
	decceleration: LREAL;
	jerk : LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>